# petricks

./: CMakeLists.txt  README.md  cmake-variants.yaml
examples/: libhello.cpp  loadrun.cpp  peinfo.cpp
include/: petricks.hpp
include/petricks/: basics.hpp  reimpl.hpp  rt-basics.hpp  rt-loader.hpp  rt-pebteb.hpp  rt-reflect.hpp  rt-winapi.hpp
